--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "zlib-sync": "^0.1.4"
   },
   "devDependencies": {
-    "dotenv": "^6.1.0"
+    "dotenv": "^6.1.0",
+    "@google-cloud/nodejs-repo-tools": "^2.3.5"
   }
 }
